objects/DynamicLayout__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>LayoutSet__c</fullName>
        <label>Layout Set</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <inlineHelpText>Object name, such as &quot;Opportunity&quot; or &quot;Lead&quot;</inlineHelpText>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>Record Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesProcess__c</fullName>
        <inlineHelpText>Available only when Object equals Opportunity</inlineHelpText>
        <label>Sales Process</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>Only available when Object equals &quot;Opportunity&quot;</inlineHelpText>
        <label>Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserProfile__c</fullName>
        <label>User Profile</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRole__c</fullName>
        <label>User Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Dynamic Layout</label>
</CustomObject>